--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="app_des">以书易书</string>
 
     <string name="skip_hint">跳过</string>
+
+    <string name="test">示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例示例</string>
 </resources>
