--- a/common/src/main/res/values-ja/strings.xml
+++ b/common/src/main/res/values-ja/strings.xml
@@ -3,10 +3,29 @@
 
 	<string name="app_name">コモン</string>
 	<string name="app_copy">コピー成功</string>
+	<string name="app_oprate_failed">操作に失敗しました</string>
+	<string name="app_oprate_succ">操作が成功しました</string>
 	<string name="app_loading_tips">読み込み中</string>
 	<string name="app_loading_empty">何もないです</string>
 	<string name="app_loading_error">読み込みに失敗しました</string>
 	<string name="app_loading_retry">再読み込み</string>
+	<string name="dialog_order">注文確認</string>
+	<string name="dialog_order_may_earn">予想収益：</string>
+	<string name="dialog_order_may_lost">予想損失：</string>
+	<string name="dialog_order_set_earnlost">ストップロスの設定</string>
+	<string name="dialog_order_equal_tips">平倉を確認しますか？</string>
+	<string name="dialog_order_set_earn">終値:</string>
+	<string name="dialog_order_set_lost">ストップロス価格：</string>
+	<string name="dialog_order_type">タイプ</string>
+	<string name="dialog_order_hand">手</string>
+	<string name="dialog_order_mutiple">倍</string>
+	<string name="dialog_order_safe">保証金</string>
+	<string name="dialog_order_service">手数料</string>
+	<string name="dialog_order_equal_all">全部倉庫にする</string>
+	<string name="dialog_order_equal_mutil">平多単</string>
+	<string name="dialog_order_equal_empty">平空券のみ</string>
+	<string name="dialog_order_market_price">市価</string>
+	<string name="dialog_order_fixed_price">価格を限る</string>
 	<string name="dialog_cancel">キャンセル</string>
 	<string name="dialog_ok">を選択します</string>
 	<string name="dialog_know">分かりました</string>
