--- a/common/src/main/res/values-ko/strings.xml
+++ b/common/src/main/res/values-ko/strings.xml
@@ -3,10 +3,29 @@
 
 	<string name="app_name">프 리 퀀 트</string>
 	<string name="app_copy">복사 성공</string>
+	<string name="app_oprate_failed">조작 실패</string>
+	<string name="app_oprate_succ">조작 성공</string>
 	<string name="app_loading_tips">로 딩 중...</string>
 	<string name="app_loading_empty">아무것도 없습니다.</string>
 	<string name="app_loading_error">로드 실패</string>
 	<string name="app_loading_retry">다시 불 러 오기</string>
+	<string name="dialog_order">확인 해 보 겠 습 니 다.</string>
+	<string name="dialog_order_may_earn">예상 이윤:</string>
+	<string name="dialog_order_may_lost">예상 결손:</string>
+	<string name="dialog_order_set_earnlost">스 톱 오 버 액 션 을 설치 하 다.</string>
+	<string name="dialog_order_equal_tips">창 고 를 확인 하 시 겠 습 니까?</string>
+	<string name="dialog_order_set_earn">다만 이윤가:</string>
+	<string name="dialog_order_set_lost">손실 제한 가격:</string>
+	<string name="dialog_order_type">유형</string>
+	<string name="dialog_order_hand">손.</string>
+	<string name="dialog_order_mutiple">배 1</string>
+	<string name="dialog_order_safe">보석금.</string>
+	<string name="dialog_order_service">수속비</string>
+	<string name="dialog_order_equal_all">올 스 탠 딩</string>
+	<string name="dialog_order_equal_mutil">단지</string>
+	<string name="dialog_order_equal_empty">그냥</string>
+	<string name="dialog_order_market_price">시가.</string>
+	<string name="dialog_order_fixed_price">제한 가격.</string>
 	<string name="dialog_cancel">취소 하 다.</string>
 	<string name="dialog_ok">확정 하 다.</string>
 	<string name="dialog_know">알았어.</string>
